--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,13 @@ section .up-link {
 #m1 .bs-1 p {
   padding-top: 50px;
 }
+
+#m2 .sb-0, #m2 .sb-1, #m2 .sb-2, #m2 .sb-3 {
+  margin-bottom: 20px;
+}
+#m2 .sb-0 p, #m2 .sb-1 p, #m2 .sb-2 p, #m2 .sb-3 p {
+  font-size: 18px;
+}
+#m2 .sb-0 p {
+  font-size: 20px;
+}
