--- a/scss/style.scss
+++ b/scss/style.scss
@@ -112,6 +112,23 @@ section {
 	}
 }
 
+#m2 {
+	.sb-0, .sb-1, .sb-2, .sb-3 {
+		margin-bottom: 20px;
+
+		p {
+			font-size: 18px;
+		}
+	}
+
+	.sb-0 {
+
+		p {
+			font-size: 20px
+		}
+	}
+}
+
 @media (max-width: 767px) {
 
 }
