--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000318}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\000036}}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,95 +25,99 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000328}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000327}}
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000331}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000331}}
 body {
   line-height: 1;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000334}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000334}}
 ol, ul {
   list-style: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000337}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000337}}
 blockquote, q {
   quotes: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000341}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000340}}
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000345}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000345}}
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\000031}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\000031}}
 * {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\000035}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\000035}}
 html, body {
   width: 100%;
   height: 100%;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\0000310}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\0000310}}
 body {
   position: relative;
   overflow: hidden;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\000031}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\000031}}
 #video-frame {
   width: 100%;
   height: 100%;
   position: relative;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\000039}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\000039}}
 #video-frame.open {
   padding-left: 300px;
   padding-bottom: 300px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000314}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000314}}
 #video-frame video {
   width: 100%;
   height: 100%;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000319}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000319}}
 #video-frame .control-bar {
   position: absolute;
   top: 0;
   right: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000326}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000326}}
 #side-frame-wrapper {
   width: 300px;
   position: absolute;
   top: 0;
   bottom: 0;
   left: -300px;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000336}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000336}}
 #side-frame-wrapper.open {
   left: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000340}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000340}}
 #side-frame-wrapper div.content {
   width: 100%;
   height: 100%;
@@ -121,20 +125,21 @@ body {
   background-color: red;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000350}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000350}}
 #bottom-frame-wrapper {
   height: 300px;
   position: absolute;
   bottom: -300px;
   left: 300px;
   right: 0;
+  -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000360}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000360}}
 #bottom-frame-wrapper.open {
   bottom: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000364}}
+@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000364}}
 #bottom-frame-wrapper div.content {
   width: 100%;
   height: 100%;
