Set up routing framework Fleshed out question adding framework Updated gruntfile with videogular fetching with bower

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,4 +1,12 @@
+/* Colors */
+$black: #121212;
+$white: #eeeeee;
+$gray: #A2A2A2;
+$gray-dark: #5D5D5D;
+$blue: #11609F;
 
+/* Site measurements */
+$font-size-base: 22px;
 
 $bottom-frame-height: 300px;
 $side-frame-width: 300px;
