--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,5 +1,10 @@
 @import 'vars';
 
 @import 'reset'; 
+@import 'fonts';
 @import 'globals';
 @import 'frame'; 
+
+@import 'videoViewerFrame';
+@import 'questionsViewerFrame';
+@import 'askQuestionFrame';
