--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,11 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+/* Colors */
+/* Site measurements */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\000036}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000318}}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -25,86 +28,177 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000327}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000328}}
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000331}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000331}}
 body {
   line-height: 1;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000334}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000334}}
 ol, ul {
   list-style: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000337}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000337}}
 blockquote, q {
   quotes: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000340}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000341}}
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/reset\.scss}line{font-family:\0000345}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000345}}
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\000031}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\000031}}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\000035}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\000035}}
 html, body {
   width: 100%;
   height: 100%;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/globals\.scss}line{font-family:\0000310}}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000310}}
 body {
   position: relative;
   overflow: hidden;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\000031}}
-#video-frame {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000318}}
+button {
+  min-width: 100px;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 15px;
+  background-color: #eeeeee;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
+  font-weight: bold;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000331}}
+button:hover {
+  background-color: white;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000335}}
+button:active {
+  background-color: #eeeeee;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000339}}
+button.blue {
+  background-color: #11609f;
+  color: #eeeeee;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000343}}
+button.blue:hover {
+  background-color: #167ccd;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000347}}
+button.blue:active {
+  background-color: #11609f;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000353}}
+input[type=text] {
+  width: 100%;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 8px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000364}}
+textarea {
+  width: 100%;
+  padding: 8px;
+  border: none;
+  border-radius: 8px;
+  resize: none;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000381}}
+.fill-space {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000387}}
+.table {
+  display: table;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000391}}
+.table-row {
+  display: table-row;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000395}}
+.table-row-0 {
+  display: table-row;
+  height: 0;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\00003100}}
+.table-col {
+  display: table-cell;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\000031}}
+#mainViewWrapper {
+  width: 100%;
+  height: 100%;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\000036}}
+#videoFrame {
   width: 100%;
   height: 100%;
   position: relative;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\000039}}
-#video-frame.open {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000316}}
+#videoFrame.open {
   padding-left: 300px;
   padding-bottom: 300px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000314}}
-#video-frame video {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000321}}
+#videoFrame video {
   width: 100%;
   height: 100%;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000319}}
-#video-frame .control-bar {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000326}}
+#videoFrame .control-bar {
   position: absolute;
   top: 0;
   right: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000326}}
-#side-frame-wrapper {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000333}}
+#sideFrame {
   width: 300px;
   position: absolute;
   top: 0;
@@ -113,36 +207,61 @@ body {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000336}}
-#side-frame-wrapper.open {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000343}}
+#sideFrame.open {
   left: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000340}}
-#side-frame-wrapper div.content {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  background-color: red;
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000347}}
+#sideFrame > div {
+  background-color: #a2a2a2;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000350}}
-#bottom-frame-wrapper {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000352}}
+#bottomFrame {
   height: 300px;
   position: absolute;
   bottom: -300px;
-  left: 300px;
+  left: 0;
   right: 0;
+  padding-left: 300px;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
+  background-color: #5d5d5d;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000360}}
-#bottom-frame-wrapper.open {
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000367}}
+#bottomFrame.open {
   bottom: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/C\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/frame\.scss}line{font-family:\0000364}}
-#bottom-frame-wrapper div.content {
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_videoViewerFrame\.scss}line{font-family:\000033}}
+#videoViewerFrame #controlBar {
   width: 100%;
+  height: 80px;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  background-color: #121212;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_askQuestionFrame\.scss}line{font-family:\000031}}
+#askQuestionFrame {
+  display: table;
+  padding: 10px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_askQuestionFrame\.scss}line{font-family:\000036}}
+#askQuestionFrame #formTextElements {
+  display: table-cell;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_askQuestionFrame\.scss}line{font-family:\000039}}
+#askQuestionFrame #formTextElements input[type=text] {
+  margin-bottom: 8px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_askQuestionFrame\.scss}line{font-family:\0000313}}
+#askQuestionFrame #formTextElements textarea {
   height: 100%;
-  position: relative;
-  background-color: purple;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_askQuestionFrame\.scss}line{font-family:\0000319}}
+#askQuestionFrame #formButtons {
+  width: 120px;
+  text-align: center;
 }
