--- a/scss/_frame.scss
+++ b/scss/_frame.scss
@@ -1,8 +1,15 @@
-#video-frame {
+#mainViewWrapper {
+	width: 100%;
+	height: 100%;
+}
+
+#videoFrame {
 	width: 100%;
 	height: 100%;
 
 	position: relative;
+
+	// background-color: $gray-dark;
 
 	transition: all 0.5s;
 
@@ -23,7 +30,7 @@
 	}
 }
 
-#side-frame-wrapper {
+#sideFrame {
 	width: $side-frame-width;
 
 	position: absolute;
@@ -37,36 +44,27 @@
 		left: 0;
 	}
 
-	div.content {
-		width: 100%;
-		height: 100%;
-
-		position: relative;
-
-		background-color: red;
+	& > div {
+		background-color: $gray;
 	}
 }
 
-#bottom-frame-wrapper {
+#bottomFrame {
 	height: $bottom-frame-height;
 
 	position: absolute;
 	bottom: -$bottom-frame-height;
-	left: $side-frame-width;
+	// left: $side-frame-width;
+	left: 0;
 	right: 0;
+
+	padding-left: $side-frame-width;
 
 	transition: all 0.5s;
 
+	background-color: $gray-dark;
+
 	&.open {
 		bottom: 0;
-	}
-
-	div.content {
-		width: 100%;
-		height: 100%;
-
-		position: relative;
-
-		background-color: purple;
 	}
 }
