--- a/public/partials/videoViewer/askQuestionFrame.html
+++ b/public/partials/videoViewer/askQuestionFrame.html
@@ -9,13 +9,8 @@
 			</div>
 			<div id="formButtons" class="table-row-0">
 				<button class="blue" ng-click="addQuestion()">Ask</button>
-				<button>Cancel</button>
+				<button ng-click="cancelAddQuestion()">Cancel</button>
 			</div>
 		</div>
 	</div>
-
-
 </div>
-
-
-
