--- a/public/partials/videoViewer/videoViewerBase.html
+++ b/public/partials/videoViewer/videoViewerBase.html
@@ -1,16 +1,16 @@
-<div id="videoFrame" ng-class="{open: !bigVid}">
+<div id="videoFrame">
 	<div class="fill-space" ui-view="videoFrame">
 		
 	</div>
 </div>
 
-<div id="bottomFrame" ng-class="{open: !bigVid}">
+<div id="bottomFrame">
 	<div class="fill-space" ui-view="bottomFrame">
 		
 	</div>
 </div>
 
-<div id="sideFrame" ng-class="{open: !bigVid}">
+<div id="sideFrame">
 	<div class="fill-space" ui-view="sideFrame">
 	</div>
 </div>
