--- a/public/partials/videoViewer/videoViewerFrame.html
+++ b/public/partials/videoViewer/videoViewerFrame.html
@@ -5,8 +5,7 @@
 			Your browser does not support the video tag.
 		</video>
 	</div>
-	<!-- <div id="controlBar">
-		<button ng-click="bigVid = !bigVid">Toggle</button>
-		<a ui-sref="videoViewer.askQuestion">Child</a>
-	</div> -->
+	<div id="controlBar">
+		<a ui-sref="videoViewer.askQuestion">Ask Question</a>
+	</div>
 </div>
