added basic question ui

--- a/public/partials/videoViewer/questionsViewerFrame.html
+++ b/public/partials/videoViewer/questionsViewerFrame.html
@@ -1,4 +1,8 @@
-<h1>Questions</h1>
-<div ng-repeat="(qid, question) in questions">
-	<a ui-sref="videoViewer.readQuestion({qid: qid})">{{ question.title }}</a>
+<div id="questionTitleContainer">
+	<h1>Questions</h1>
+</div>
+<div id="questionsContainer">
+	<div id="questionElement" ng-repeat="(qid, question) in questions">
+		<a ui-sref="videoViewer.readQuestion({qid: qid})">{{ question.title }}</a>
+	</div>
 </div>
