--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,11 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
 /* Colors */
 /* Site measurements */
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000318}}
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,700);
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\000036}}
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -28,54 +28,54 @@ time, mark, audio, video {
 }
 
 /* HTML5 display-role reset for older browsers */
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000328}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\0000327}}
 article, aside, details, figcaption, figure,
 footer, header, hgroup, menu, nav, section {
   display: block;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000331}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\0000331}}
 body {
   line-height: 1;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000334}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\0000334}}
 ol, ul {
   list-style: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000337}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\0000337}}
 blockquote, q {
   quotes: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000341}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\0000340}}
 blockquote:before, blockquote:after,
 q:before, q:after {
   content: '';
   content: none;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_reset\.scss}line{font-family:\0000345}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_reset\.scss}line{font-family:\0000345}}
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\000031}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\000031}}
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\000035}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\000035}}
 html, body {
   width: 100%;
   height: 100%;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000310}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000310}}
 body {
   position: relative;
   overflow: hidden;
@@ -83,7 +83,7 @@ body {
   font-size: 22px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000318}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000318}}
 button {
   min-width: 100px;
   cursor: pointer;
@@ -95,29 +95,29 @@ button {
   font-size: 22px;
   font-weight: bold;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000331}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000331}}
 button:hover {
   background-color: white;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000335}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000335}}
 button:active {
   background-color: #eeeeee;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000339}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000339}}
 button.blue {
   background-color: #11609f;
   color: #eeeeee;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000343}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000343}}
 button.blue:hover {
   background-color: #167ccd;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000347}}
 button.blue:active {
   background-color: #11609f;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000353}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000353}}
 input[type=text] {
   width: 100%;
   padding: 8px 12px;
@@ -127,7 +127,7 @@ input[type=text] {
   font-size: 22px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000364}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000364}}
 textarea {
   width: 100%;
   padding: 8px;
@@ -138,41 +138,41 @@ textarea {
   font-size: 22px;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000381}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000381}}
 .fill-space {
   width: 100%;
   height: 100%;
   position: relative;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000387}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000387}}
 .table {
   display: table;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000391}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000391}}
 .table-row {
   display: table-row;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\0000395}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\0000395}}
 .table-row-0 {
   display: table-row;
   height: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_globals\.scss}line{font-family:\00003100}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_globals\.scss}line{font-family:\00003100}}
 .table-col {
   display: table-cell;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\000031}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\000031}}
 #mainViewWrapper {
   width: 100%;
   height: 100%;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\000036}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\000036}}
 #videoFrame {
   width: 100%;
   height: 100%;
@@ -182,19 +182,19 @@ textarea {
   padding-left: 300px;
   padding-bottom: 300px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000321}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\0000321}}
 #videoFrame video {
   width: 100%;
   height: 100%;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000326}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\0000326}}
 #videoFrame .control-bar {
   position: absolute;
   top: 0;
   right: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000333}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\0000333}}
 #sideFrame {
   width: 300px;
   position: absolute;
@@ -204,12 +204,12 @@ textarea {
   transition: all 0.5s;
   left: 0;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000347}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\0000347}}
 #sideFrame > div {
   background-color: #a2a2a2;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/_frame\.scss}line{font-family:\0000352}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/_frame\.scss}line{font-family:\0000352}}
 #bottomFrame {
   height: 300px;
   position: absolute;
@@ -222,7 +222,7 @@ textarea {
   bottom: 0;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_videoViewerFrame\.scss}line{font-family:\000033}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_videoViewerFrame\.scss}line{font-family:\000033}}
 #videoViewerFrame #controlBar {
   width: 100%;
   height: 80px;
@@ -232,24 +232,63 @@ textarea {
   background-color: #121212;
 }
 
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\000031}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_questionsViewerFrame\.scss}line{font-family:\000032}}
+#sideFrame div #questionTitleContainer {
+  width: 100%;
+  height: 100px;
+  padding: 20px;
+  background-color: #11609f;
+  margin-bottom: 20px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_questionsViewerFrame\.scss}line{font-family:\0000310}}
+#sideFrame div #questionTitleContainer h1 {
+  text-align: center;
+  color: #eeeeee;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 47px;
+  font-weight: bold;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_questionsViewerFrame\.scss}line{font-family:\0000318}}
+#sideFrame div #questionsContainer {
+  padding-left: 10px;
+  padding-right: 10px;
+  height: 100%;
+  width: 100%;
+  position: relative;
+  overflow-y: scroll;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_questionsViewerFrame\.scss}line{font-family:\0000327}}
+#sideFrame div #questionsContainer #questionElement {
+  width: 100%;
+  height: 100px;
+  margin-bottom: 20px;
+  background-color: #eeeeee;
+  border-radius: 13px;
+  padding: 20px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_questionsViewerFrame\.scss}line{font-family:\0000337}}
+#sideFrame div #questionsContainer #questionElement a {
+  text-align: center;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\000031}}
 #askQuestionFrame {
   display: table;
   padding: 10px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\000036}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\000036}}
 #askQuestionFrame #formTextElements {
   display: table-cell;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\000039}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\000039}}
 #askQuestionFrame #formTextElements input[type=text] {
   margin-bottom: 8px;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\0000313}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\0000313}}
 #askQuestionFrame #formTextElements textarea {
   height: 100%;
 }
-@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\0000319}}
+@media -sass-debug-info{filename{font-family:file\:\/\/\/Users\/kduvvuru\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\0000319}}
 #askQuestionFrame #formButtons {
   width: 120px;
   text-align: center;
