--- a/scss/videoViewer/_questionsViewerFrame.scss
+++ b/scss/videoViewer/_questionsViewerFrame.scss
@@ -1,3 +1,43 @@
-#questionsViewerFrame {
+#sideFrame div{
+	#questionTitleContainer {
+		width:100%;
+		height:100px;
+		padding: 20px;
+
+		background-color:#11609f;
+		margin-bottom: 20px;		
+
+		h1 {
+			text-align:center;
+			color:#eeeeee;
+			font-family: 'Open Sans', sans-serif;
+			font-size: 47px;
+			font-weight: bold;
+		}
+	}
+	#questionsContainer {
+		padding-left: 10px;
+		padding-right: 10px;
+		height:100%;
+		width:100%;
+		position:relative;
+		
+		overflow-y:scroll;
+
+		#questionElement {
+			width: 100%;
+			height:100px;
 	
+			margin-bottom: 20px;
+			background-color: #eeeeee;
+			border-radius: 13px;
+		
+			padding:20px;			
+
+			a {
+				text-align: center;	
+			}
+		}	
+	}
 }
+
