--- a/public/partials/videoViewer/videoViewerBase.html
+++ b/public/partials/videoViewer/videoViewerBase.html
@@ -1,8 +1,4 @@
-<div id="videoFrame">
-	<div class="fill-space" ui-view="videoFrame">
-		
-	</div>
-</div>
+<div id="videoFrame" ui-view="videoFrame"></div>
 
 <div id="bottomFrame">
 	<div class="fill-space" ui-view="bottomFrame">
