--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -8,5 +8,6 @@ $blue: #11609F;
 /* Site measurements */
 $font-size-base: 22px;
 
+$control-bar-height: 60px;
 $bottom-frame-height: 300px;
 $side-frame-width: 300px;
