--- a/scss/_globals.scss
+++ b/scss/_globals.scss
@@ -74,6 +74,11 @@ textarea {
 	font-size: $font-size-base;
 }
 
+a {
+	color: $white;
+	text-decoration: none;
+}
+
 ///////////////////////
 //  Utility Classes  //
 ///////////////////////
