--- a/scss/_frame.scss
+++ b/scss/_frame.scss
@@ -36,6 +36,44 @@
 	& > div {
 		background-color: $gray;
 	}
+
+	.headed-list {
+		display: table;
+		width: 100%;
+		height: 100%;
+
+		header {
+			display: table-row;
+			height: 0;
+
+			background-color: $blue;
+			color: $white;
+
+			h1 {
+				text-align: center;
+				font-size: $font-size-base * 2;
+				padding: 15px;
+			}
+
+			a {
+				display: block;
+				font-size: $font-size-base * 1.2;
+				padding: 10px;
+				text-decoration: none;
+				color: $white;
+			}
+		}
+
+		.list-wrapper {
+			display: table-row;
+
+			.list {
+				width: 100%;
+				height: 100%;
+				overflow-y: auto;
+			}
+		}
+	}
 }
 
 #bottomFrame {
