--- a/scss/main.scss
+++ b/scss/main.scss
@@ -11,4 +11,5 @@
 
 @import 'videoViewer/videoViewerFrame';
 @import 'videoViewer/questionsViewerFrame';
+@import 'videoViewer/questionViewerFrame';
 @import 'videoViewer/askQuestionFrame';
