--- a/scss/videoViewer/_videoViewerFrame.scss
+++ b/scss/videoViewer/_videoViewerFrame.scss
@@ -24,6 +24,8 @@
 			width: 100%;
 			height: 10px;
 
+			position: relative;
+
 			cursor: pointer;
 			background-color: transparentize($white, 0.5);
 
@@ -33,11 +35,21 @@
 
 				background-color: $blue;
 			}
+
+			.question-marker {
+				width: 5px;
+				height: 15px;
+
+				position: absolute;
+				top: 0;
+
+				background-color: $white;
+			}
 		}
 
 		.play-button {
 			min-width: initial;
-			padding: 5px 15px;
+			padding: 5px 10px;
 
 
 			border-radius: 50%;
