--- a/scss/main.scss
+++ b/scss/main.scss
@@ -13,3 +13,4 @@
 @import 'videoViewer/questionsViewerFrame';
 @import 'videoViewer/questionViewerFrame';
 @import 'videoViewer/askQuestionFrame';
+@import 'videoViewer/writeAnswerFrame';
