--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2621,6 +2621,7 @@ a {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_questionViewerFrame\.scss}line{font-family:\0000319}}
 #questionViewerFrame .answer {
+  margin-bottom: 8px;
   padding: 15px;
   background-color: #bcbcbc;
 }
@@ -2644,6 +2645,29 @@ a {
 }
 @media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_askQuestionFrame\.scss}line{font-family:\0000319}}
 #askQuestionFrame #formButtons {
+  width: 120px;
+  text-align: center;
+}
+
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_writeAnswerFrame\.scss}line{font-family:\000031}}
+#writeAnswerFrame {
+  display: table;
+  padding: 10px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_writeAnswerFrame\.scss}line{font-family:\000036}}
+#writeAnswerFrame #formTextElements {
+  display: table-cell;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_writeAnswerFrame\.scss}line{font-family:\000039}}
+#writeAnswerFrame #formTextElements input[type=text] {
+  margin-bottom: 8px;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_writeAnswerFrame\.scss}line{font-family:\0000313}}
+#writeAnswerFrame #formTextElements textarea {
+  height: 100%;
+}
+@media -sass-debug-info{filename{font-family:file\:\/\/R\:\/Users\/David\/Documents\/Developer\/duzuro\/scss\/videoViewer\/_writeAnswerFrame\.scss}line{font-family:\0000319}}
+#writeAnswerFrame #formButtons {
   width: 120px;
   text-align: center;
 }
